--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ ul li::before {
     height: 28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url(images/unchecked.png);
+    background-image: url(unchecked.png);
     background-size: cover;
     background-position: center;
     top: 10px;
@@ -97,7 +97,7 @@ ul li::before {
 
 
 .checked::before {
-    background-image: url(images/checked.png);
+    background-image: url(checked.png);
 }
 
 
